# xdiff

./: Cargo.toml  README.md
examples/: config.rs  terminal-inline.rs
src/: config.rs
