[package]
name = "xdiff"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
console = "0.15.8"
reqwest = {version ="0.11.11", default-features = false,features = ["rustls"] }
serde_yaml = "0.9.34"
similar = { version = "2.5.0", features = ["bytes", "inline"] }
tokio = { version = "1.38.0", features = ["full"] }
